--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vueuse/core": "^9.6.0",
+    "bootstrap": "^5.2.3",
     "router": "^1.3.7",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
