--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@vueuse/core": "^9.6.0",
     "bootstrap": "^5.2.3",
+    "lodash": "^4.17.21",
     "router": "^1.3.7",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
