--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-brands-svg-icons": "^6.2.1",
+    "@fortawesome/free-regular-svg-icons": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/vue-fontawesome": "^3.0.2",
     "@vueuse/core": "^9.6.0",
     "bootstrap": "^5.2.3",
+    "fontawesome": "^5.6.3",
     "lodash": "^4.17.21",
     "router": "^1.3.7",
     "vue": "^3.2.45",
