--- a/package.json
+++ b/package.json
@@ -14,12 +14,17 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/vue-fontawesome": "^3.0.2",
     "@vueuse/core": "^9.6.0",
+    "axios": "^1.2.1",
     "bootstrap": "^5.2.3",
     "fontawesome": "^5.6.3",
+    "jquery": "^3.6.2",
     "lodash": "^4.17.21",
+    "popper.js": "^1.16.1",
     "router": "^1.3.7",
+    "vee-validate": "^2.2.15",
     "vue": "^3.2.45",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
