--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "fontawesome": "^5.6.3",
     "jquery": "^3.6.2",
     "lodash": "^4.17.21",
+    "pinia": "^2.0.28",
     "popper.js": "^1.16.1",
     "router": "^1.3.7",
     "vee-validate": "^2.2.15",
