--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "vee-validate": "^2.2.15",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6",
+    "vue-security": "^1.0.0",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
